# ArcadiaCoach

./: .gitignore  AGENTS.md  ArcadiaCoachApp.swift  Info.plist  Package.swift  package-lock.json  package.json  render.yaml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  start.sh
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20241015_01_initial_persistence.py  (+8 more)
backend/app/: agent_models.py  arcadia_agent.py  assessment_attachments.py  assessment_grading.py  assessment_result.py  assessment_submission.py  chat_server.py  chatkit.py  config.py  constants.py  curriculum_foundations.py  curriculum_sequencer.py  developer_routes.py  goal_parser.py  guardrails.py  learner_profile.py  logging_config.py  main.py  memory_store.py  milestone_author.py  milestone_projects.py  onboarding_assessment.py  onboarding_routes.py  profile_routes.py  prompt_utils.py  requirement_advisor.py  sequencer_advisor.py  session_routes.py  telemetry.py  telemetry_pipeline.py  tools.py  vector_memory.py
backend/arcadia_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: __init__.py  backfill_json_stores.py  db_metrics.py  run_migrations.py
backend/tests/: test_assessment_submission_store.py  test_curriculum_foundations.py  test_curriculum_sequencer.py  test_db_monitoring.py  test_elo_category_dedup.py  test_goal_parser.py  test_healthz.py  test_learner_profile_resync.py  test_onboarding_assessment.py  test_profile_elo_plan.py  test_prompt_utils.py  test_run_migrations.py  test_schedule_refresh.py  test_telemetry_pipeline.py
mcp_server/: README.md  pyproject.toml  server.py
mcp_server/arcadia_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+143 files in other folders)
