[project]
name = "arcadia-backend"
version = "0.1.0"
description = "Backend services for Arcadia Coach (ChatKit session token generation and utilities)."
readme = "README.md"
authors = [{ name = "Arcadia Coach" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "openai>=1.40.0",
    "openai-chatkit>=0.0.4",
    "openai-guardrails>=0.1.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "psycopg[binary]>=3.1.19"
]

[tool.uvicorn]
app = "app.main:app"
host = "0.0.0.0"
port = 8000
reload = true

[tool.pytest.ini_options]
pythonpath = [
    "."
]
