[project]
name = "arcadia-mcp"
version = "0.1.0"
description = "Model Context Protocol server providing Arcadia Coach widgets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.11.0,<1.12.0",
    "pydantic>=2.7.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0"
]

[project.scripts]
arcadia-mcp = "server:main"
